# multilinear

./: Cargo.toml  rust-toolchain.toml
src/: constraints.rs  evaluation.rs  expr.rs  field.rs  lib.rs  merkle.rs  polynomials.rs  sumcheck.rs  system.rs  trace.rs  transcript.rs
src/constraint_system/: constraints.rs  evaluation.rs  mod.rs  polynomials.rs  sumcheck.rs  system.rs  trace.rs
src/fri/: batched_fri.rs  batched_pcs.rs  mod.rs  multilinear_pcs.rs
src/merkle_tree/: mod.rs
src/ntt/: mod.rs
