[package]
name = "multilinear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.9.0" }
rand_chacha = { version = "0.9" }
sha2 = "0.10"
generic-array = { version = "0.14", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.0", features = ["serde"] }
winterfell = { version = "0.12.0" }